# InkFiltration

./: .gitmodules  README.md  instructions.txt
PrinterLeaks/app/: build.gradle
PrinterLeaks/app/src/main/: AndroidManifest.xml
PrinterLeaks/app/src/main/cpp/: envelope.cpp  filter.h  findpeaks.cpp  findpeaks.h  getPeaksA.cpp  getPeaksA.h  getPeaksA_data.cpp  getPeaksA_terminate.h  getPeaksGlobal_initialize.cpp  getPeaksGlobal_initialize.h  getPeaksGlobal_terminate.h  getPeaksGlobal_types.h  getPeaksPre.cpp  getPeaksPre.h  getPeaksPre_data.h  getPeaksPre_initialize.cpp  getPeaks_initialize.h  insertionsort.cpp  insertionsort.h  introsort.cpp  rtGetInf.cpp  rtGetNaN.cpp  rtGetNaN.h  sort.cpp  sparse.h
PrinterLeaks/app/src/main/java/com/ucla/printerleaks/: MFCC.java  Recognition.kt  (+3 more)
patternInjection/: C4notes  Canon202_bits  Canon202text_bits  README.md  colorSweep  filter.sh  genericPattern.py  intercalate.sh  log  randomBits.sh  randomScript  randomStream  rawStream  raw_injection.sh  testPrinter.py  testPrinter.py.old  testStream  testStream.old
patternInjection/Layouts/: whitePDF.pdf.old
patternInjection/filter/: README.md  defense.sh  filter.sh  malicious_filter.sh  mime.convs  mime.types
receiver/: README.md
receiver/.PrinterLeaks/app/src/main/cpp/: filter.h  getPeaks.h  getPeaksA_data.h  getPeaksGlobal_initialize.h  getPeaksGlobal_terminate.cpp  getPeaksPre_data.cpp  getPeaksPre_terminate.h  getPeaks_data.h  introsort.h  rt_nonfinite.cpp  rt_nonfinite.h  sort.h
receiver/.PrinterLeaks/app/src/main/res/layout/: activity_main.xml
receiver/MATLAB/: README.md  bits2packets.m  display_figures.m  getParameter.m  getPeaks.m  getPeaksA.m  getPeaksPre.m  interbits2packets.m  obtainPeaksLocation.m  obtainPeaksLocation2.m  offsetAmp.m  peaks2bits.m  peaks2bits.m.old  plot_process_signal.m  processSignal.m  results.mat  samples.csv  samples.mat  sweep_analysis.m  test.m  testInter.m  testdemod.asv  testdemod.m  testdemod.m~  uiCallback.m
receiver/MATLAB/payloads/: Canon2050_bits  Canon650text_bits  Canon_MG2410_5_10text_bits  Canon_MG2410_5_25text_bits  Canon_MG2410_5_25text_bits.complex  Canon_MG2410_6_10text_bits  Canon_MG2410_6_5text_bits  Canon_MG2410_9_10text_bits  Canon_MG2410_9_25text_bits  Canon_MG2410_9_50text_bits.old2  Canon_MG2410_9_5text_bits  Epson2750_bits  Epson750text_bits  Epson_L4150_9_25text_bits  Epson_L4150_9_3text_bits  Epson_L4150_9_50text_bits.old  HP1050text_bits  HP2550_bits  HP_Deskjet_1115_11_1text_bits  HP_Deskjet_1115_11_50text_bits  HP_Deskjet_1115_11_5text_bits  HP_Deskjet_1115_12_25text_bits  HP_Deskjet_1115_15_1text_bits  HP_Deskjet_1115_15_50text_bits  HP_Deskjet_1115_15_5text_bits  HP_Deskjet_1115_510text_bits  HP_Deskjet_1115_525text_bits  HP_Deskjet_1115_55text_bits  HP_Deskjet_1115_5_10text_bits  HP_Deskjet_1115_65text_bits  HP_Deskjet_1115_710text_bits  HP_Deskjet_1115_75text_bits  HP_Envy_11_50text_bits  HP_Envy_11_5text_bits  HP_Photosmart_D110_15_5text_bits  display_bits.sh
receiver/MATLAB/samples2/: README.md
receiver/PrinterLeaks/: build.gradle  settings.gradle
receiver/PrinterLeaks/app/: build.gradle
receiver/PrinterLeaks/app/src/main/assets/: model.tflite
receiver/PrinterLeaks/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.old  CXSparseAPI.cpp  CXSparseAPI.h  a.out  buildInfo.mat  eml_setop.cpp  eml_setop.h  envelope.cpp  envelope.h  filter.cpp  filtfilt.cpp  filtfilt.h  findpeaks.cpp  findpeaks.h  getPeaks.cpp  getPeaksA.cpp  getPeaksA.h  getPeaksA_initialize.cpp  getPeaksA_initialize.h  getPeaksA_terminate.cpp  getPeaksGlobal_data.cpp  getPeaksGlobal_data.h  getPeaksGlobal_initialize.cpp  getPeaksGlobal_terminate.cpp  getPeaksGlobal_terminate.h  getPeaksGlobal_types.h  getPeaksPre.cpp  getPeaksPre.h  getPeaksPre_initialize.h  getPeaksPre_terminate.cpp  getPeaks_data.cpp  getPeaks_initialize.cpp  getPeaks_terminate.cpp  getPeaks_terminate.h  heapsort.cpp  heapsort.h  insertionsort.cpp  insertionsort.h  introsort.cpp  (+17 more)
receiver/PrinterLeaks/app/src/main/res/raw/: samples.csv
receiver/PrinterLeaks/app/src/main/res/values/: strings.xml
receiver/PrinterLeaks/gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
